--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,4 @@
-REACT_APP_BACKEND_URL=your_backend_url_here
+REACT_APP_BACKEND_URL=https://gpt-code-review-assistant.onrender.com
 WDS_SOCKET_PORT=443
 REACT_APP_ENABLE_VISUAL_EDITS=false
 ENABLE_HEALTH_CHECK=false
