--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,3 @@
-MONGO_URL=your_mongodb_connection_string_here
-DB_NAME=your_database_name
+MONGO_URL=mongodb+srv://manasagoud2022_db_user:bAOTlPeRwINroG56@ai-code-review-cluster.ixqpuuo.mongodb.net/?retryWrites=true&w=majority&appName=ai-code-review-cluster
+DB_NAME=ai-code-review-assistant
 CORS_ORIGINS=*
